# rest-api-testing-1

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: ci-lint-test.yml  main.yml
Postman/collection/: restful-booker Api test.postman_collection.json
Postman/environment/: restful-booking.postman_environment.json
src/: __init__.py  api_client.py  config.py  health.py
src/helpers/: auth.py  booking.py
tests/: conftest.py  report.html  test_auth.py  test_booking.py  test_health.py
tests/data/: booking_data.json
